<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaoziZxing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="action_github">GitHub</string>
    <string name="drawer_open">Menu open</string>
    <string name="drawer_close">Menu closed</string>
    <string name="title_activity_qrcode_result">QrcodeResultActivity</string>
    <string name="title_activity_er_wei_ma_result_acitivty">ErWeiMaResultAcitivty</string>
    <string name="denglu">登录</string>
    <string name="zhanghaoyouxiangshouji">帐号/邮箱/手机号</string>
    <string name="mima">密码</string>
    <string name="xinyonghuzhuce">新用户注册</string>
    <string name="wangjimima">忘记密码?</string>
    <string name="disanfangdenglu">第三方登录</string>

    <string name="title_activity_order">OrderActivity</string>
    <string name="dingdan">订单</string>
    <string name="querenshouhuo">确认收货</string>
    <string name="chakanwuliu">查看物流</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="yonghuming">输入用户名</string>
    <string name="shoujihao">输入11位手机号</string>
    <string name="yanzhengma">输入短信验证码</string>
    <string name="huoquyanzhengma">获取验证码</string>
    <string name="zaicihuoqu">再次获取</string>
    <string name="zimuheshuzi">6-16位字母、数字</string>
    <string name="lijizhuce">立即注册</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_npc_register">NpcRegisterActivity</string>
    <string name="title_activity_npc_business_register">NpcBusinessRegisterActivity</string>
    <string name="querenmima">确认密码</string>
    <string name="title_activity_npc_product">NpcProductActivity</string>
    <string name="title_activity_npc_product_popup_window">NpcProductPopupWindow</string>
</resources>
