<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include layout="@layout/head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="40dp">

        <EditText
            android:id="@+id/zhanghao"
            style="@style/EditText"
            android:drawableLeft="@drawable/zhanghao"
            android:hint="@string/zhanghaoyouxiangshouji" />

        <View
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mima"
                style="@style/EditText"
                android:drawableLeft="@drawable/mima"
                android:hint="@string/mima"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/mimaxianshi"
                android:layout_width="30dp"
                android:layout_height="15dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:src="@drawable/mima_select" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/denglu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/denglu_select"
            android:gravity="center"
            android:text="@string/denglu"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="30dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/npcperson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xinyonghuzhuce" />

            <TextView
                android:id="@+id/wangjimima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/wangjimima" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/fengexian" />

            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/disanfangdenglu" />

            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/fengexian" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qq" />

            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <ImageView
                android:id="@+id/weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wx" />

            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <ImageView
                android:id="@+id/weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wb" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
